# math-challenger

./: .gitignore  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.backend  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  test_conn.py
backend/migrations/: env.py
backend/migrations/versions/: 279fe7747b92_add_check_constraint_to_level.py  40e1ef430317_add_score_field_for_user.py  481d8058e430_add_level_field_at_question.py  57cdebbde1a7_replace_with_level_enum.py  833886e8846d_create_initial_tables.py  b1a3b3a1c407_create_initial_tables.py  fcc00cb22509_initial_schema.py
backend/seeds/: seed.py
backend/seeds/tests/: test-questions.json
backend/seeds/updates/: 2024-05-24-test-detailed-report.json  2025-06-09-additional-questions.json  2025-06-09-new-math-questions.json
backend/src/app/: init_db.py  main.py
backend/src/app/db/: session.py
backend/src/app/models/: __init__.py  question.py  user.py
backend/src/app/routes/: questions.py
backend/src/app/routes/dependencies/: auth.py
backend/src/scripts/: init_db.py  questions-answers.json
docker/: docker-compose.yml
frontend/: Dockerfile.frontend  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: Header.tsx  Quiz.tsx
