[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jason Xue", email = "jasonxue1228@gmail.com" }
]
dependencies = [
    "sqlalchemy>=2.0.41",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "debugpy>=1.8.14",
    "alembic>=1.16.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "authlib>=1.6.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
